--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 /* ===== CORE STYLES ===== */
 :root {
-  --content-width: min(1300px, 90vw);
-  --outer-width: min(1400px, 95vw);
+  --content-width: min(90vw, 1800px);  /* Will be 90% of viewport width, up to 1800px */
+  --outer-width: min(95vw, 2000px);    /* Will be 95% of viewport width, up to 2000px */
 }
 
 /* Base Reset */
@@ -54,7 +54,7 @@ canvas {
   margin: 0 auto !important;
   background-color: rgba(0, 0, 0, 0.8) !important;
   border-radius: 1rem !important;
-  padding: 1.5rem !important;
+  padding: 2rem !important;
   max-width: var(--content-width) !important;
 }
 
@@ -252,24 +252,17 @@ canvas {
   80% { opacity: 1; }
 }
 
-@media screen and (min-width: 2000px) {
+@media screen and (min-width: 2500px) {
   :root {
-    --content-width: min(1600px, 80vw);
-    --outer-width: min(1800px, 85vw);
-  }
-  
-  .black-content-box {
-    padding: 2rem !important;
-  }
-}
-
-@media screen and (min-width: 3000px) {
-  :root {
-    --content-width: min(2000px, 70vw);
-    --outer-width: min(2200px, 75vw);
+    --content-width: min(80vw, 2200px);
+    --outer-width: min(85vw, 2400px);
   }
   
   html {
-    font-size: 18px;
+    font-size: 18px; /* Slightly larger text on huge screens */
+  }
+  
+  .black-content-box {
+    padding: 3rem !important;
   }
 }
